@@ -85,56 +85,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-XX:MaxPermSize=1012m -XX:-UseSplitVerifier -noverify</argLine>
-                    <systemProperties>
-                        <property>
-                            <name>com.sun.aas.instanceRoot</name>
-                            <!--value>${project.baseUri}/test-classes/</value-->
-                            <value>${project.build.testOutputDirectory}</value>
-                        </property>
-                        <property>
-                            <name>nhinc.properties.dir</name>
-                            <!--value>${project.baseUri}/test-classes/</value-->
-                            <value>${project.build.testOutputDirectory}</value>
-                        </property>
-                    </systemProperties>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>cobertura-instrument</id>
-                        <configuration>
-                            <skip>${skip.cobertura}</skip>
-                            <instrumentation />
-                        </configuration>
-                        <goals>
-                            <goal>clean</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>cobertura-check</id>
-                        <configuration>
-                            <skip>${skip.cobertura}</skip>
-                            <check>
-                                <haltOnFailure>${cobertura.check.haltOnFailure}</haltOnFailure>
-                                <totalBranchRate>${cobertura.totalBranchRate}</totalBranchRate>
-                                <totalLineRate>${cobertura.totalLineRate}</totalLineRate>
-                            </check>
-                        </configuration>
-                        <goals>
-                            <goal>clean</goal>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
 
         <pluginManagement>
